[tool.poetry]
name = "test-pipeline"
version = "0.1.0"
description = ""
authors = ["jirathip-k <115384744+jirathip-k@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "test_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
prefect = "^2.19.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
